--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "build": "vite build",
         "preview": "vite preview",
         "deploy": "gh-pages -d dist",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
+        "predeploy": "npm run build"
     },
     "dependencies": {
         "clsx": "^2.1.1",
